Update class on hcard link

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -32,6 +32,6 @@
     {{ end }}
   </p>
   <div class ="hcard" style="display:none">
-    &copy; <a class="h-card" rel="me"  href="{{ .Site.BaseURL  }}">{{$superuser_name}}</a>
+    &copy; <a class="h-card u-url u-uid" rel="me"  href="{{ .Site.BaseURL  }}">{{$superuser_name}}</a>
   </div>
 </footer>
