add photo to hcard

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -8,6 +8,14 @@
     {{ $superuser_role = .Params.role }}
   {{ end }}
 
+  {{ $person_page_path :=  (printf "/authors/%s" $superuser_username) }}
+  {{ $person_page := site.GetPage $person_page_path }}
+  {{ if not $person_page }}
+    {{ errorf "Could not find an author page at `%s`." $person_page_path }}
+  {{end}}
+  {{ $person := $person_page.Params }}
+  {{ $avatar := ($person_page.Resources.ByType "image").GetMatch "*avatar*" }}
+
 <footer class="site-footer">
   {{ with site.GetPage "privacy.md" }}
   <p class="powered-by">
@@ -32,7 +40,12 @@
     {{ end }}
   </p>
   <div class ="h-card" style="display:none">
-    <a class="u-url u-uid"  href="{{ .Site.BaseURL  }}">{{$superuser_name}}</a>
+    <a class="u-url" rel="me" href="{{ .Site.BaseURL  }}">{{$superuser_name}}</a>
     {{ with site.Params.email }}<a href="mailto:{{ . }}" rel="me" class="u-email" />{{.}}</a> {{ end }}
+    {{ if $avatar }}
+      {{ $avatar_image := $avatar.Fill "200x200 Center" }}
+      <img class="u-photo" src="{{ $avatar_image.RelPermalink }}" >
+    {{ end}}
+
   </div>
 </footer>
