--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -2,7 +2,7 @@
 {{ $share := .share | default false }}
 {{ $page := .page }}
 
-<meta content="{{ $page.Params.Date }}" itemprop="datePublished">
+<meta class="dt-published" content="{{ $page.Params.Date }}" itemprop="datePublished">
 <meta content="{{ $page.Params.LastMod }}" itemprop="dateModified">
 
 <div class="article-metadata">
@@ -27,7 +27,7 @@
           {{ i18n "last_updated" }}
       {{ end }}
     {{ end }}
-    <time class="dt-published">{{ $date }}</time>
+    <time>{{ $date }}</time>
   </span>
   {{ end }}
 
