--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -2,7 +2,7 @@
 {{ $share := .share | default false }}
 {{ $page := .page }}
 
-<meta class="dt-published" content="{{ $page.Params.Date }}" itemprop="datePublished">
+<meta content="{{ $page.Params.Date }}" itemprop="datePublished">
 <meta content="{{ $page.Params.LastMod }}" itemprop="dateModified">
 
 <div class="article-metadata">
@@ -20,6 +20,7 @@
   {{ if not (in (slice "talk" "page") $page.Type) }}
   <span class="article-date">
     {{ $date := $page.Lastmod.Format site.Params.date_format }}
+    {{ $date2 :=$page.Lastmod.Format  "2006-01-02 15:04:05"}}
     {{ if eq $page.Type "publication" }}
       {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
     {{ else }}
@@ -27,7 +28,9 @@
           {{ i18n "last_updated" }}
       {{ end }}
     {{ end }}
-    <time>{{ $date }}</time>
+    <!--<time class="dt-published" datetime="YYYY-MM-DD HH:MM:SS">The Date</time>-->
+    <!-- "2006-01-02 15:04:05" -->
+    <time class="dt-published" datetime="{{ $date2 }}">{{ $date }}</time>
   </span>
   {{ end }}
 
