--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -65,7 +65,7 @@
     <i class="fas fa-folder"></i>
     {{ range $index, $value := . -}}
       {{- if gt $index 0 }}, {{ end -}}
-      <a href="{{ (site.GetPage (printf "/%s/%s" $taxonomy (. | urlize))).RelPermalink }}">{{ . }}</a>
+      <a class="p-category" href="{{ (site.GetPage (printf "/%s/%s" $taxonomy (. | urlize))).RelPermalink }}">{{ . }}</a>
     {{- end -}}
   </span>
   {{ end }}
