Add user photo to hentry

--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -23,13 +23,13 @@
     <div id="profile">
 
       {{ if site.Params.gravatar }}
-      <img class="portrait" src="https://s.gravatar.com/avatar/{{ md5 $person.email }}?s=200')" itemprop="image" alt="Avatar">
+      <img class="portrait u-photo" src="https://s.gravatar.com/avatar/{{ md5 $person.email }}?s=200')" itemprop="image" alt="Avatar">
       {{ else if $portrait}}
       {{ $portrait_image := $portrait.Fill "200x200 Center" }}
-      <img class="portrait" src="{{ $portrait_image.RelPermalink }}" itemprop="image" alt="Portrait">
+      <img class="portrait u-photo" src="{{ $portrait_image.RelPermalink }}" itemprop="image" alt="Portrait">
       {{ else if $avatar }}
       {{ $avatar_image := $avatar.Fill "200x200 Center" }}
-      <img class="portrait" src="{{ $avatar_image.RelPermalink }}" itemprop="image" alt="Avatar">
+      <img class="portrait u-photo" src="{{ $avatar_image.RelPermalink }}" itemprop="image" alt="Avatar">
       {{ end }}
 
       <div class="portrait-title">
