Fix more typos in head partial

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -6,6 +6,6 @@
 {{ with site.Params.indieweb.gitlab }}<link rel="me" href="{{ . }}" /> {{ end }}
 {{ with site.Params.email }}<link href="mailto:{{ . }}" rel="me" /> {{ end }}
 {{ with site.Params.indieweb.webmentionio}}
-<link rel="webmention" href="{{ . }}}/webmention" />
-<link rel="pingback" href="{{ . }}}/xmlrpc" />
+<link rel="webmention" href="{{ . }}/webmention" />
+<link rel="pingback" href="{{ . }}/xmlrpc" />
 {{ end }}
