--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -21,12 +21,15 @@
   <span class="article-date">
     {{ $date := $page.Lastmod.Format site.Params.date_format }}
     {{ $date2 :=$page.Lastmod.Format  "2006-01-h02 15:04:05"}}
-    {{ if and (eq $page.Type "publication") (eq $page.Type "post") }}
+    {{ if  eq $page.Type "publication") }}
       {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
     {{ else }}
-      {{ if ne $page.Params.Lastmod $page.Params.Date }}
+       {{if eq $page.Type "post"}}
+       
+       {{else}}
+         {{ if ne $page.Params.Lastmod $page.Params.Date }}
           {{ i18n "last_updated" }}
-      {{ end }}
+       {{ end }}
     {{ end }}
     <!--<time class="dt-published" datetime="YYYY-MM-DD HH:MM:SS">The Date</time>-->
     <!-- "2006-01-02 15:04:05" -->
