Stop old posts being shown as updated at date site was ported

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -21,13 +21,10 @@
   <span class="article-date">
     {{ $date := $page.Lastmod.Format site.Params.date_format }}
     {{ $date2 :=$page.Lastmod.Format  "2006-01-h02 15:04:05"}}
-    {{ if  eq $page.Type "publication") }}
+    {{ if  eq $page.Type "publication" }}
       {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
     {{ else }}
-       {{if eq $page.Type "post"}}
-       
-       {{else}}
-         {{ if ne $page.Params.Lastmod $page.Params.Date }}
+         {{ if and (ne $page.Type "post") (ne $page.Params.Lastmod $page.Params.Date) }}
           {{ i18n "last_updated" }}
        {{ end }}
     {{ end }}
