--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -24,7 +24,7 @@
     {{ if  eq $page.Type "publication" }}
       {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
     {{ else }}
-         {{ if and (ne $page.Type "post") (ne $page.Params.Lastmod $page.Params.Date) }}
+        {{ if ne $page.Params.Lastmod $page.Params.Date }}
           {{ i18n "last_updated" }}
        {{ end }}
     {{ end }}
@@ -33,7 +33,22 @@
     <time class="dt-published" datetime="{{ $date2 }}">{{ $date }}</time>
   </span>
   {{ end }}
-
+  {{ if ne $page.Params.Lastmod $page.Params.Date }}
+  <span class="article-date">
+    {{ $date3 := $page.Params.Date site.Params.date_format }}
+    {{ $date4 :=$page.Params.Date  "2006-01-h02 15:04:05"}}
+    {{ if  eq $page.Type "publication" }}
+      {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
+    {{ else }}
+        {{ if ne $page.Params.Lastmod $page.Params.Date }}
+          {{ i18n "published" }}
+       {{ end }}
+    {{ end }}
+    <!--<time class="dt-published" datetime="YYYY-MM-DD HH:MM:SS">The Date</time>-->
+    <!-- "2006-01-02 15:04:05" -->
+    <time class="dt-published" datetime="{{ $date4 }}">{{ $date3 }}</time>
+  </span>
+  {{ end }}
   {{ if and (eq $is_list 1) (eq $page.Type "publication") }}
   <span class="middot-divider"></span>
   <span class="pub-publication">
