--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -18,37 +18,38 @@
   {{ end }}
 
   {{ if not (in (slice "talk" "page") $page.Type) }}
-  <span class="article-date">
-    {{ $date := $page.Lastmod.Format site.Params.date_format }}
-    {{ $date2 :=$page.Lastmod.Format  "2006-01-h02 15:04:05"}}
-    {{ if  eq $page.Type "publication" }}
-      {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
-    {{ else }}
-        {{ if ne $page.Params.Lastmod $page.Params.Date }}
-          {{ i18n "last_updated" }}
-       {{ end }}
+    <span class="article-date">
+      {{ $date := $page.Lastmod.Format site.Params.date_format }}
+      {{ $date2 :=$page.Lastmod.Format  "2006-01-h02 15:04:05"}}
+      {{ if  eq $page.Type "publication" }}
+        {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
+      {{ else }}
+          {{ if ne $page.Params.Lastmod $page.Params.Date }}
+            {{ i18n "last_updated" }}
+        {{ end }}
+      {{ end }}
+      <!--<time class="dt-published" datetime="YYYY-MM-DD HH:MM:SS">The Date</time>-->
+      <!-- "2006-01-02 15:04:05" -->
+      <time class="dt-updated" datetime="{{ $date2 }}">{{ $date }}</time>
+    </span>
+    {{ if ne $page.Params.Lastmod $page.Params.Date }}
+    <span class="article-date">
+      {{ $date3 := $page.Params.Date site.Params.date_format }}
+      {{ $date4 :=$page.Params.Date  "2006-01-h02 15:04:05"}}
+      {{ if  eq $page.Type "publication" }}
+        {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
+      {{ else }}
+          {{ if ne $page.Params.Lastmod $page.Params.Date }}
+            {{ i18n "published" }}
+        {{ end }}
+      {{ end }}
+      <!--<time class="dt-published" datetime="YYYY-MM-DD HH:MM:SS">The Date</time>-->
+      <!-- "2006-01-02 15:04:05" -->
+      <time class="dt-published" datetime="{{ $date4 }}">{{ $date3 }}</time>
+    </span>
     {{ end }}
-    <!--<time class="dt-published" datetime="YYYY-MM-DD HH:MM:SS">The Date</time>-->
-    <!-- "2006-01-02 15:04:05" -->
-    <time class="dt-published" datetime="{{ $date2 }}">{{ $date }}</time>
-  </span>
   {{ end }}
-  {{ if ne $page.Params.Lastmod $page.Params.Date }}
-  <span class="article-date">
-    {{ $date3 := $page.Params.Date site.Params.date_format }}
-    {{ $date4 :=$page.Params.Date  "2006-01-h02 15:04:05"}}
-    {{ if  eq $page.Type "publication" }}
-      {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
-    {{ else }}
-        {{ if ne $page.Params.Lastmod $page.Params.Date }}
-          {{ i18n "published" }}
-       {{ end }}
-    {{ end }}
-    <!--<time class="dt-published" datetime="YYYY-MM-DD HH:MM:SS">The Date</time>-->
-    <!-- "2006-01-02 15:04:05" -->
-    <time class="dt-published" datetime="{{ $date4 }}">{{ $date3 }}</time>
-  </span>
-  {{ end }}
+
   {{ if and (eq $is_list 1) (eq $page.Type "publication") }}
   <span class="middot-divider"></span>
   <span class="pub-publication">
