--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -34,8 +34,10 @@
     </span>
     {{ if ne $page.Params.Lastmod $page.Params.Date }}
     <span class="article-date">
-      {{ $date3 := $page.Params.Date.Format  site.Params.date_format }}
-      {{ $date4 :=$page.Params.Date.Format  "2006-01-h02 15:04:05"}}
+    {{with $page.Date}}
+      {{ $date3 := .Format site.Params.date_format }}
+      {{ $date4 := .Format  "2006-01-h02 15:04:05"}}
+    {{end}}
       {{ if  eq $page.Type "publication" }}
         {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
       {{ else }}
