--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -33,10 +33,12 @@
       <time class="dt-updated" datetime="{{ $date2 }}">{{ $date }}</time>
     </span>
     {{ if ne $page.Params.Lastmod $page.Params.Date }}
+    {{$date3 := $date}}
+    {{$date4 := $date2}}
     <span class="article-date">
-    {{with $page.Date}}
-      {{ $date3 := .Format site.Params.date_format }}
-      {{ $date4 := .Format  "2006-01-h02 15:04:05"}}
+    {{with $page.Params.Date}}
+      {{ $date3 = .Format site.Params.date_format }}
+      {{ $date4 : .Format  "2006-01-h02 15:04:05"}}
     {{end}}
       {{ if  eq $page.Type "publication" }}
         {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
