--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -38,7 +38,7 @@
     <span class="article-date">
     {{with $page.Params.Date}}
       {{ $date3 = .Format site.Params.date_format }}
-      {{ $date4 : .Format  "2006-01-h02 15:04:05"}}
+      {{ $date4 = .Format  "2006-01-h02 15:04:05"}}
     {{end}}
       {{ if  eq $page.Type "publication" }}
         {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
