--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -26,42 +26,49 @@
   
 
   {{ if not (in (slice "talk" "page") $page.Type) }}
-    <span class="article-date">
-      {{with $page.Params.Date}}
-        {{ $date3 = .Format site.Params.date_format }}
-        {{ $date4 = .Format  "2006-01-h02 15:04:05"}}
-      {{end}}
-      {{ if  eq $page.Type "publication" }}
-        {{ $date3 = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
-      {{ else }}
-        {{ if ne $page.Params.Lastmod $page.Params.Date }}
-            {{ i18n "published" }}
-        {{ end }}
-      {{ end }}
-      <time class="dt-published" datetime="{{ $date4 }}">{{ $date3 }}</time>
-    </span>
     
     <span class="article-date">
       {{ if  eq $page.Type "publication" }}
         {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
       {{ else }}
-        {{ if ne $page.Params.Lastmod $page.Params.Date }}
-          {{ i18n "last_updated" }}
+          {{ if ne $page.Params.Lastmod $page.Params.Date }}
+            {{ i18n "last_updated" }}
         {{ end }}
       {{ end }}
-      
+      <!--<time class="dt-published" datetime="YYYY-MM-DD HH:MM:SS">The Date</time>-->
+      <!-- "2006-01-02 15:04:05" -->
       <time class="dt-updated" datetime="{{ $date2 }}">{{ $date }}</time>
     </span>
-
-    {{ if and (eq $is_list 1) (eq $page.Type "publication") }}
-      <span class="middot-divider"></span>
-      <span class="pub-publication">
-        {{ if $page.Params.publication_short }}
-          {{ $page.Params.publication_short | markdownify }}
-        {{ else if $page.Params.publication }}
-          {{ $page.Params.publication | markdownify }}
+    {{ if ne $page.Params.Lastmod $page.Params.Date }}
+  
+    <span class="article-date">
+    {{with $page.Params.Date}}
+      {{ $date3 = .Format site.Params.date_format }}
+      {{ $date4 = .Format  "2006-01-h02 15:04:05"}}
+    {{end}}
+      {{ if  eq $page.Type "publication" }}
+        {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
+      {{ else }}
+          {{ if ne $page.Params.Lastmod $page.Params.Date }}
+            {{ i18n "published" }}
         {{ end }}
-      </span>
+      {{ end }}
+      <!--<time class="dt-published" datetime="YYYY-MM-DD HH:MM:SS">The Date</time>-->
+      <!-- "2006-01-02 15:04:05" -->
+      <time class="dt-published" datetime="{{ $date4 }}">{{ $date3 }}</time>
+    </span>
+    {{ end }}
+  {{ end }}
+
+  {{ if and (eq $is_list 1) (eq $page.Type "publication") }}
+  <span class="middot-divider"></span>
+  <span class="pub-publication">
+    {{ if $page.Params.publication_short }}
+      {{ $page.Params.publication_short | markdownify }}
+    {{ else if $page.Params.publication }}
+      {{ $page.Params.publication | markdownify }}
+    {{ end }}
+  </span>
   {{ end }}
 
   {{ if and (eq $page.Type "post") (not (or (eq site.Params.reading_time false) (eq $page.Params.reading_time false))) }}
