Modify page metadata show updated and published dates

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -6,8 +6,8 @@
 {{ $date2 := $page.Lastmod.Format  "2006-01-h02 15:04:05"}}
 {{ $date3 := $date}}
 {{ $date4 := $date2}}
-  
-  
+
+
 <meta content="{{ $page.Params.Date }}" itemprop="datePublished">
 <meta content="{{ $page.Params.LastMod }}" itemprop="dateModified">
 
@@ -22,42 +22,21 @@
   </div>
   {{ end }}
   {{ end }}
-  
-  
+
+
 
   {{ if not (in (slice "talk" "page") $page.Type) }}
-    
-    <span class="article-date">
-      {{ if  eq $page.Type "publication" }}
-        {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
-      {{ else }}
-          {{ if ne $page.Params.Lastmod $page.Params.Date }}
-            {{ i18n "last_updated" }}
-        {{ end }}
-      {{ end }}
-      <!--<time class="dt-published" datetime="YYYY-MM-DD HH:MM:SS">The Date</time>-->
-      <!-- "2006-01-02 15:04:05" -->
-      <time class="dt-updated" datetime="{{ $date2 }}">{{ $date }}</time>
-    </span>
-    {{ if ne $page.Params.Lastmod $page.Params.Date }}
-  
     <span class="article-date">
     {{with $page.Params.Date}}
       {{ $date3 = .Format site.Params.date_format }}
       {{ $date4 = .Format  "2006-01-h02 15:04:05"}}
     {{end}}
-      {{ if  eq $page.Type "publication" }}
-        {{ $date = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
-      {{ else }}
-          {{ if ne $page.Params.Lastmod $page.Params.Date }}
-            {{ i18n "published" }}
-        {{ end }}
-      {{ end }}
-      <!--<time class="dt-published" datetime="YYYY-MM-DD HH:MM:SS">The Date</time>-->
-      <!-- "2006-01-02 15:04:05" -->
-      <time class="dt-published" datetime="{{ $date4 }}">{{ $date3 }}</time>
-    </span>
+    {{ if  eq $page.Type "publication" }}
+      {{ $date3 = $page.Date.Format (site.Params.publications.date_format | default "January, 2006") }}
+      {{ $date4 = $page.Date.Format  "2006-01-h02 15:04:05"}}
     {{ end }}
+    <time class="dt-published" datetime="{{ $date4 }}">{{ $date3 }}</time>
+    </span>
   {{ end }}
 
   {{ if and (eq $is_list 1) (eq $page.Type "publication") }}
@@ -98,6 +77,13 @@
 
   {{ if $share }}
     {{ partial "share.html" $page }}
+  {{ end }}
+  {{ if ne $page.Params.Lastmod $page.Params.Date }}
+    <div>
+      <span class="article-date">
+        Updated <time class="dt-updated" datetime="{{ $date2 }}">{{ $date }}</time>
+      </span>
+    </div>
   {{ end }}
 
 </div>
