--- a/layouts/partials/comments/utterances.html
+++ b/layouts/partials/comments/utterances.html
@@ -1,6 +1,6 @@
 <div id="utterances"></div>
 <script src="https://utteranc.es/client.js"
-        repo="synesthesia/utterances"
+        repo="synesthesia/synesthesia-comments"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
