Fixup author partial

--- a/layouts/partials/page_author.html
+++ b/layouts/partials/page_author.html
@@ -25,12 +25,13 @@
     {{ $profile_url = site.BaseURL }}
   {{ end }}
   {{ $avatar := (.Resources.ByType "image").GetMatch "*avatar*" }}
-  <div class="media author-card" itemscope itemtype="http://schema.org/Person">
+  {{ $avatar_shape := site.Params.avatar.shape | default "circle" }}
+  <div class="media author-card content-widget-hr" itemscope itemtype="http://schema.org/Person">
     {{ if and site.Params.gravatar .Params.email }}
-      <img class="portrait mr-3 u-photo" src="https://s.gravatar.com/avatar/{{ md5 .Params.email }}?s=200')" itemprop="image" alt="Avatar">
+      <img class="avatar mr-3 u-photo {{if eq $avatar_shape "square"}}avatar-square{{else}}avatar-circle{{end}}" src="https://s.gravatar.com/avatar/{{ md5 .Params.email }}?s=200')" itemprop="image" alt="Avatar">
     {{ else if $avatar }}
       {{ $avatar_image := $avatar.Fill "250x250 Center" }}
-      <img class="portrait mr-3 u-photo" src="{{ $avatar_image.RelPermalink }}" itemprop="image" alt="Avatar">
+      <img class="avatar mr-3 u-photo {{if eq $avatar_shape "square"}}avatar-square{{else}}avatar-circle{{end}}" src="{{ $avatar_image.RelPermalink }}" itemprop="image" alt="Avatar">
     {{ end }}
 
     <div class="media-body">
