--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -25,10 +25,10 @@
 
   <p class="powered-by">
      {{ with site.Copyright }}{{ replace . "{year}" now.Year | markdownify}} &middot;{{ end }}
+    </p>
+  {{ partial "site_footer_license.html" . }}
 
-     <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike
-    </a>
-
+  <p>
     {{ if ne .Type "docs" }}
     <span class="float-right" aria-hidden="true">
       <a href="#" id="back_to_top">
