--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,12 +1,12 @@
 {{ $commentable_map := site.Params.comments.commentable | default dict }}
 {{ $commentable_bool := index $commentable_map .Type | default false }}
-{{ if site.Params.comments.engine | and $commentable_bool | and (ne .Params.commentable false) | or .Params.commentable }}
+{{ if site.Params.comments.provider | and $commentable_bool | and (ne .Params.commentable false) | or .Params.commentable }}
 <section id="comments">
-  {{ if eq site.Params.comments.engine 1 }}
+  {{ if eq site.Params.comments.provider 1 }}
     {{ partial "comments/disqus.html" . }}
-  {{ else if eq site.Params.comments.engine 2 }}
+  {{ else if eq site.Params.comments.provider 2 }}
     {{ partial "comments/commento.html" . }}
-  {{ else if eq site.Params.comments.engine 3 }}
+  {{ else if eq site.Params.comments.provider 3 }}
     {{ partial "comments/utterances.html" . }}
   {{ end }}
 </section>
