--- a/layouts/page/archives.html
+++ b/layouts/page/archives.html
@@ -1,25 +1,24 @@
-{{- define "main" -}}
-
-{{ partial "page_header.html" . }}
-
-<div class="universal-wrapper">
-  <div class="inner">
-    {{ range (.Site.RegularPages.GroupByDate "2006" ) }}
-        <h3 class="archive-year">{{ .Key }}</h3>
-
-        <ul class="archive-list">
-            {{ range (where .Pages "Type" "in" (slice "post" "note")) }}
-                <li>
-                    {{ .PublishDate.Format "02 Jan" }}
-                    -
-                    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-                </li>
+{{ define "main" }}
+    {{ partial "page_header.html" . }}
+    <div class="universal-wrapper">
+        <div class="inner">
+            {{ range (.Site.RegularPages.GroupByDate "2006" ) }}
+                <h3 class="archive-year">{{ .Key }}</h3>
+                <ul class="archive-list">
+                    {{ range (where .Pages "Type" "in" (slice "post" "note")) }}
+                        <li>
+                            {{ if .PublishDate.IsZero }}
+                                {{ .Date.Format "02 Jan"}} 
+                            {{else}}
+                                {{ .PublishDate.Format "02 Jan" }}
+                            {{end}}
+                            -
+                            <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                        </li>
+                    {{ end }}
+                </ul>
             {{ end }}
-        </ul>
-    {{ end }}
-</div>
+        </div>
+    </div>
 
-
-</div>
-
-{{- end -}}
+{{ end }}
