chore: updating copyright info

--- a/assets/scss/tokens/_layout.scss
+++ b/assets/scss/tokens/_layout.scss
@@ -1,3 +1,8 @@
+/* 
+   adapted from work by Rowan Manning
+   https://github.com/rowanmanning/rowanmanning.com
+   https://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_GB
+*/
 
 $layout-width-max: 720px;
 $layout-width-mobile: 640px;
