--- a/assets/scss/components/_webmention-form.scss
+++ b/assets/scss/components/_webmention-form.scss
@@ -1,3 +1,8 @@
+/* 
+   adapted from work by Rowan Manning
+   https://github.com/rowanmanning/rowanmanning.com
+   https://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_GB
+*/
 
 // Webmention form block
 .webmention-form {
