--- a/assets/scss/shared/_typography.scss
+++ b/assets/scss/shared/_typography.scss
@@ -1,3 +1,9 @@
+/* 
+   adapted from work by Rowan Manning
+   https://github.com/rowanmanning/rowanmanning.com
+   https://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_GB
+*/
+
 // Base typography placeholder
 %base-typography {
     /*
