styles: on dark theme make insert highlight more visible [skip ci]

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -8,3 +8,4 @@
 @import "components/webmention-form";
 
 ins {text-decoration:none; background-color:yellow;}
+.dark ins {text-decoration:none; background-color:green;}
