--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,5 +1,6 @@
 <link rel="authorization_endpoint" href="https://indieauth.com/auth">
 <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
+<link rel="micropub" href="{{ ".netlify/functions/micropub" | absURL }}">
 {{ with site.Params.twitter }}<link rel="me" href="https://twitter.com/{{ . }}" /> {{ end }}
 {{ with site.Params.indieweb.github }}<link rel="me" href="{{ . }}" /> {{ end }}
 {{ with site.Params.indieweb.linkedin }}<link rel="me" href="{{ . }}" /> {{ end }}
