--- a/layouts/partials/page_header.html
+++ b/layouts/partials/page_header.html
@@ -54,7 +54,7 @@
 {{end}}
 
 <div class="article-container pt-3">
-  <h1 itemprop="name" class="p-name">{{ $title }}<span class="permalink" style="font-size: 0.7em;">&nbsp;<a class="u-url" href="{{ $page.Permalink }}">#</a></span></h1>
+  <h1 itemprop="name" class="p-name">{{ $title }}</h1><span class="permalink" style="font-size: 0.7em; display: none;">&nbsp;<a class="u-url" href="{{ $page.Permalink }}">#</a></span>
 
   {{ with $page.Params.subtitle }}
   <p class="page-subtitle">{{ . | markdownify | emojify }}</p>
@@ -80,7 +80,7 @@
     {{ $ctnr = "universal-wrapper" }}
   {{end}}
 <div class="{{$ctnr}} pt-3">
-  <h1 itemprop="name" class="p-name">{{ $title }}<span class="permalink" style="font-size: 0.7em;">&nbsp;<a class="u-url" href="{{ $page.Permalink }}">#</a></span></h1>
+  <h1 itemprop="name" class="p-name">{{ $title }}</h1><span class="permalink" style="font-size: 0.7em; display: none;">&nbsp;<a class="u-url" href="{{ $page.Permalink }}">#</a></span>
 
   {{ with $page.Params.subtitle }}
   <p class="page-subtitle">{{ . | markdownify | emojify }}</p>
