--- a/layouts/partials/data/ref.html
+++ b/layouts/partials/data/ref.html
@@ -7,7 +7,7 @@
 {{ $webmentionClass := false }}
 
 {{/* Bookmarks */}}
-{{ if and (eq .Params.type "bookmark") .Params.bookmarkOf }}
+{{ if and (eq .Params.subType "bookmark") .Params.bookmarkOf }}
 	{{ $data = dict "url" .Params.bookmarkOf }}
 	{{ if .Site.Data.refs }}
 		{{ $data = index .Site.Data.refs (md5 .Params.bookmarkOf) | default $data }}
