--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -13,14 +13,16 @@
 
 <div class="article-metadata">
 
-  {{/* If `authors` is set and is not empty. */}}
-  {{ if $page.Params.authors }}
-  {{ $authorLen := len $page.Params.authors }}
-  {{ if gt $authorLen 0 }}
-  <div>
-    {{ partial "page_metadata_authors" $page }}
-  </div>
-  {{ end }}
+  {{ if not (in (slice "stream") $page.Type) }}
+    {{/* If `authors` is set and is not empty. */}}
+    {{ if $page.Params.authors }}
+      {{ $authorLen := len $page.Params.authors }}
+      {{ if gt $authorLen 0 }}
+        <div>
+          {{ partial "page_metadata_authors" $page }}
+        </div>
+      {{ end }}
+    {{ end }}
   {{ end }}
 
 
