feat: change presentation of stream view

--- a/layouts/partials/views/compact.html
+++ b/layouts/partials/views/compact.html
@@ -82,7 +82,7 @@
           {{ partial "page_metadata" (dict "page" $item "is_list" 1) }}
         {{ end }}
       {{ else }}
-      {{ partial "page_metadata" (dict "page" $item "is_list" 1) }}
+      {{/* partial "page_metadata" (dict "page" $item "is_list" 1) */}}
       {{ end }}
 
     </div>
